# Monomer_hackathon

./: Monomer_Test_DO_NOT_USE_cell_concentration_data.csv  plot_growth.ipynb  plot_growth_princess.ipynb  plot_growth_princess2.ipynb  pyproject.toml
princess_data/: annotated_results.csv  princess_column10_7am_10am.csv  princess_column11_cell_concentration.csv  princess_column12_cell_concentration.csv  princess_column1_7am_10am.csv  princess_column2_7am_10am.csv  princess_column3_7am_10am.csv  princess_column3_cell_concentration.c_sv  princess_column3_cell_concentration.csv  princess_column4_7am_10am.csv  princess_column5_cell_concentration.csv  princess_column6_cell_concentration.csv  princess_column7_7am_10am.csv  princess_column8_cell_concentration.csv  princess_column9_cell_concentration.csv
